--- a/bibliography.bib
+++ b/bibliography.bib
@@ -158,7 +158,7 @@
 }
 
 @article{srinivasan2018,
-  author={Srinivasan, Balaji S.},
+  author={Srinivasan, Balaji S. and Lee, Leland},
   month={6},
   title={{Quantifying Decentralization}},
   year={2018},
@@ -370,4 +370,75 @@ month={9},
   pages={1--9},
   year={2020},
   publisher={Palgrave}
+}
+
+@article{gini1936measure,
+  title={On the measure of concentration with special reference to income and statistics},
+  author={Gini, Corrado},
+  journal={Colorado College Publication, General Series},
+  volume={208},
+  number={1},
+  pages={73--79},
+  year={1936},
+  publisher={Colorado College, Colorado Springs}
+}
+
+@article{kalinski2016,
+  author={Kalinski, Matt},
+  year={2016},
+  month={04},
+  pages={},
+  title={The Newton-Leibnitz theorem}
+}
+
+@article{lorenz1905methods,
+  title={Methods of measuring the concentration of wealth},
+  author={Lorenz, Max O},
+  journal={Publications of the American statistical association},
+  volume={9},
+  number={70},
+  pages={209--219},
+  year={1905},
+  publisher={Taylor \& Francis}
+}
+
+@article{rhoades1993herfindahl,
+  title={The herfindahl-hirschman index},
+  author={Rhoades, Stephen A},
+  journal={Fed. Res. Bull.},
+  volume={79},
+  pages={188},
+  year={1993},
+  publisher={HeinOnline}
+}
+
+@inproceedings{kusmierz2022centralized,
+  title={How centralized is decentralized? Comparison of wealth distribution in coins and tokens},
+  author={Kusmierz, Bartosz and Overko, Roman},
+  booktitle={2022 IEEE International Conference on Omni-layer Intelligent Systems (COINS)},
+  pages={1--6},
+  year={2022},
+  organization={IEEE}
+}
+
+@techreport{cong2023inclusion,
+  title={Inclusion and democratization through web3 and defi? initial evidence from the ethereum ecosystem},
+  author={Cong, Lin William and Tang, Ke and Wang, Yanxin and Zhao, Xi},
+  year={2023},
+  institution={National Bureau of Economic Research}
+}
+
+@article{campajola2022evolution,
+  title={The evolution of centralisation on cryptocurrency platforms},
+  author={Campajola, Carlo and Cristodaro, Raffaele and De Collibus, Francesco Maria and Yan, Tao and Vallarano, Nicolo' and Tessone, Claudio J},
+  journal={arXiv preprint arXiv:2206.05081},
+  year={2022}
+}
+
+@misc{usdoj2015,
+  month={6},
+  title={{Horizontal Merger Guidelines (08/19/2010)}},
+  author={The United States Department of Justice},
+  year={2015},
+  url={https://www.justice.gov/atr/horizontal-merger-guidelines-08192010#5c},
 }
