Added description of indices

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -442,3 +442,34 @@ month={9},
   year={2015},
   url={https://www.justice.gov/atr/horizontal-merger-guidelines-08192010#5c},
 }
+
+@article{palma2011homogeneous,
+  title={Homogeneous middles vs. heterogeneous tails, and the end of the ‘inverted-U’: It's all about the share of the rich},
+  author={Palma, Jos{\'e} Gabriel},
+  journal={development and Change},
+  volume={42},
+  number={1},
+  pages={87--153},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{shannon1998mathematical,
+  title={The Mathematical Theory of Communication; Shannon, CE, Weaver, W., Eds},
+  author={Shannon, Claude E},
+  journal={The mathematical theory of communication},
+  pages={29--125},
+  year={1998}
+}
+
+@techreport{theil1967economics,
+  title={Economics and information theory},
+  author={Theil, Henri},
+  year={1967}
+}
+
+@article{barbereau2022defi,
+  title={Defi, not so decentralized: The measured distribution of voting rights},
+  author={Barbereau, Tom and Smethurst, Reilly and Papageorgiou, Orestis and Rieger, Alexander and Fridgen, Gilbert},
+  year={2022}
+}
