--- a/bibliography.bib
+++ b/bibliography.bib
@@ -473,3 +473,20 @@ month={9},
   author={Barbereau, Tom and Smethurst, Reilly and Papageorgiou, Orestis and Rieger, Alexander and Fridgen, Gilbert},
   year={2022}
 }
+
+@article{wall2021,
+  author={Wall, Eric},
+  month={12},
+  title={{Privacy and Cryptocurrency, Part IV: Stablecoins— Blacklists and Traceability}},
+  year={2021},
+  url={https://medium.com/human-rights-foundation-hrf/privacy-and-cryptocurrency-part-iv-stablecoins-for-human-rights-blacklists-and-traceability-6d74ee17c25d},
+}
+
+@book{edgington2023,
+  author={Edgington, Ben},
+  edition={1.3.0},
+  month={4},
+  title={{Upgrading Ethereum}},
+  year={2023},
+  url={https://eth2book.info/capella/annotated-spec/#reward-and-penalty-calculations},
+}
